crates/bsql/tests/compile_fail/type_mismatch_i32_for_i64.rs
// i32 cannot be used for int2 column — no implicit widening
fn main() {
    let id = 1i32;
    let _ = bsql::query!(
        "SELECT id FROM users WHERE score = $id: i32"
    );
}
